[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
name = "lowu"
edition = "2018"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0" }
cortex-m-rtic = "1.1.3"
rtic-monotonic = "1.0.0"
cortex-m = "0.7.6"
stm32wlxx-hal = { version = "0.6.1", features = ["rt", "stm32wle5", "chrono", "defmt"] }
bbqueue = "0.5.1"
fugit = "0.3.6"
paste = "1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

